fix: Change search route and repo
